lexer_parser/src/test/exempleFile/miniJaja/success/lengthAnything.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation du length	*/
/************************/

class lengthArray {

	main {
        
                void e = length(lengthArray);

	}
}
