lexer_parser/src/test/exempleFile/miniJaja/fail/lengthEmpty.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation du length	*/
/************************/

class lengthEmpty {

	main {
        int a = length();

	}
}
